--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -958,10 +958,9 @@ section,
 .services .content .service-item {
   background-color: var(--surface-color);
   padding: 20px 30px;
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-  /* border-left: 1px solid color-mix(in srgb, var(--default-color), transparent 90%); */
+  border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  border-left: 1px solid color-mix(in srgb, var(--default-color), transparent 90%); 
   position: relative;
-  border-radius: 2%;
 }
 
 .services .content .service-item .number {
@@ -981,6 +980,7 @@ section,
 .services .content .service-item .service-item-icon img {
   width: 20em;
   height: 15em;
+  border-radius: 10px;
 }
 
 .services .content .service-item .service-item-icon:before {
@@ -1498,6 +1498,7 @@ section,
   box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
   border-radius: 8px;
+  padding: 20px, 0, 20px, 20px;
   overflow: hidden;
 }
 
