--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1229,6 +1229,9 @@ section,
   height: 100px;
   border-radius: 50%;
   margin-bottom: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .testimonials .testimonial blockquote p {
@@ -1240,6 +1243,7 @@ section,
 .testimonials .testimonial .client-name {
   text-transform: uppercase;
   font-size: 1.2rem;
+  text-align: center;
   color: var(--accent-color);
 }
 
